sandbox/output
StockProfit.cpp:9:17: error: invalid operands to binary expression ('vector<int>' and 'int')
    if (prices_ == 1) {
        ~~~~~~~ ^  ~
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_pair.h:214:5: note: candidate template ignored: could not match 'pair' against 'vector'
    operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:291:5: note: candidate template ignored: could not match 'reverse_iterator' against 'vector'
    operator==(const reverse_iterator<_Iterator>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:341:5: note: candidate template ignored: could not match 'reverse_iterator' against 'vector'
    operator==(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:805:5: note: candidate template ignored: could not match '__normal_iterator' against 'vector'
    operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:811:5: note: candidate template ignored: could not match '__normal_iterator' against 'vector'
    operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1031:5: note: candidate template ignored: could not match 'move_iterator' against 'vector'
    operator==(const move_iterator<_IteratorL>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1037:5: note: candidate template ignored: could not match 'move_iterator' against 'vector'
    operator==(const move_iterator<_Iterator>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:139:5: note: candidate template ignored: could not match 'new_allocator' against 'vector'
    operator==(const new_allocator<_Tp>&, const new_allocator<_Tp>&)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:128:5: note: candidate template ignored: could not match 'allocator' against 'vector'
    operator==(const allocator<_T1>&, const allocator<_T2>&)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:133:5: note: candidate template ignored: could not match 'allocator' against 'vector'
    operator==(const allocator<_Tp>&, const allocator<_Tp>&)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:1404:5: note: candidate template ignored: could not match 'vector<type-parameter-0-0, type-parameter-0-1>' against 'int'
    operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
    ^
StockProfit.cpp:10:39: error: use of undeclared identifier 'prices'; did you mean 'prices_'?
        maxProfitsAfterBuy.push_back(-prices[0]);
                                      ^~~~~~
                                      prices_
./StockProfit.hpp:23:17: note: 'prices_' declared here
    vector<int> prices_;
                ^
2 errors generated.
make: *** [test] Error 1
